--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Roboto', sans-serif;
     width: 100vw;
     height: 100vh;
+    padding: 10px 50px 5px 50px;
 
 }
 
@@ -15,6 +16,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 15vh;
 }
 
 .logo {
@@ -36,9 +38,48 @@ ul {
 
 }
 
+.icon-buttons {}
+
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24
+}
+
 main {
     display: flex;
     flex-direction: column;
+    height: 60vh;
+
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.shoe-image {
+    width: 300px;
+    height: 300px;
+}
+
+.shoe-image img {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    bottom: 10px;
+}
+
+.hero {
+    font-family: 'Bebas Neue', sans-serif;
+    font-weight: 400;
+    font-size: 9rem;
+    position: absolute;
+    z-index: -1;
 
 }
 
