--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -6,9 +6,7 @@
 
 body {
     font-family: "Roboto", sans-serif;
-    /* width: 80vw; */
     height: 100vh;
-    padding: 10px 50px 5px 50px;
 }
 
 header {
@@ -16,10 +14,12 @@ header {
     align-items: center;
     justify-content: space-between;
     height: 10vh;
+    width: 100vw;
+    padding: 15px 50px 0px 50px;
 }
 
 .logo {
-    width: 130px;
+    width: 120px;
     height: auto;
 }
 
@@ -28,22 +28,28 @@ img {
 }
 
 .logo img {
-    width: 40%;
+    width: 100%;
     height: auto;
-    min-width: 100px;
+    min-width: 70px;
 }
 
 .menu-items {
     display: flex;
     list-style: none;
-    width: 300px;
+    width: 320px;
+    height: 32px;
     justify-content: space-between;
     font-size: 0.8rem;
     font-weight: 600;
+    align-items: center;
 }
 
 .icon-buttons {
-    width: 150px;
+    display: flex;
+    width: 120px;
+    height: 45px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .material-symbols-outlined {
@@ -51,29 +57,36 @@ img {
 }
 
 .shopping-box {
-    /* background-color: black; */
-    border: 5px double rgb(0, 0, 0);
+    background-color: black;
+    border: 4px solid rgb(0, 0, 0);
     border-radius: 50%;
 }
 
-.shopping-img {
-    /* background-color: black; */
-    /* border-color: ; */
+.shopping-box>.material-symbols-outlined {
+    color: white;
 }
 
-main {
+
+.wrapper {
     display: flex;
+    flex: 1;
     flex-direction: column;
-    height: 55vh;
+    height: 65vh;
+    padding: 0px 60px 90px 60px;
+    width: 100vw;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    /* justify-content: center; */
+    /* padding: 100px; */
 }
 
 .shoe-image img {
+    position: relative;
     width: 100%;
     height: auto;
     z-index: 1;
-    bottom: 10px;
+    top: 130px;
+    right: -50px;
     min-width: 200px;
     max-width: 300px;
 }
@@ -81,17 +94,57 @@ main {
 .hero {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
-    font-size: 13rem;
+    font-size: 15rem;
+    text-align: center;
     position: absolute;
-    z-index: -1;
+
+    z-index: 0;
+    width: 100%;
+    height: 250px;
+}
+
+.hero2 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    /* z-index: 0 ; */
+}
+
+.hero2 .collections-shape {
+    display: flex;
+    flex-direction: column;
+    width: 80px;
+    height: 80px;
+    background-color: brown;
+    border-radius: 50%;
+}
+
+.collections-shape .explore-text {
+    font-size: 0.3rem;
+}
+
+.collections-shape .arrow-icon {}
+
+.collections-shape .year-2022 {
+    font-size: 0.7rem;
+}
+
+.hero2 .shoe-properties {
+    width: 200px;
+    border-left: double;
+    padding-left: 10px;
+    font-size: 0.75rem;
+
 }
 
 footer {
     display: flex;
     width: 100vw;
-    height: 30vh;
+    height: 20vh;
     align-items: center;
     justify-content: space-between;
+    padding: 0px 50px;
 }
 
 /* .shoe-size{
@@ -104,25 +157,56 @@ footer {
     height: 100px;
 }
 
-.shoe-box {
+.ft-shoe-box {
     display: flex;
     flex-direction: column;
-    height: 200px;
-    width: 200px;
+    height: 190px;
+    width: 180px;
+    text-align: center;
     align-items: center;
+    justify-content: space-around;
+    border: none solid 2px;
+    border-radius: 48% 48% 0 0;
+    background-color: rgb(250, 200, 200);
+}
+
+.ft-shoe-box h3 {
+    font-size: 0.75rem;
+    font-weight: 600;
+}
+
+.shoe-image-cart {
+    display: flex;
     justify-content: space-between;
 }
 
-.ft-nike-shoe-left {}
+.ft-shop-middle {
+    width: 300px;
+    height: 140px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around
+}
 
-.ft-nike-shoe-left>h3 {}
+.ft-shop-middle>h2 {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 2rem;
+    font-stretch: wider;
+    font-weight: 400;
+}
 
-.ft-nike-shoe-left>p {}
+.ft-shop-middle>p {
+    font-size: 0.8rem;
+}
 
-.ft-shop-middle {}
-
-.ft-nike-shoe-right {}
-
-.ft-nike-shoe-right>h3 {}
-
-.ft-nike-shoe-right>p {}
+.ft-shop-middle>button {
+    width: fit-content;
+    padding: 10px 25px;
+    border-radius: 25px;
+    background-color: black;
+    color: white;
+    font-weight: 600;
+    font-size: small;
+    border: none;
+}
