--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -42,6 +42,7 @@ img {
     font-size: 0.9rem;
     font-weight: 600;
     align-items: center;
+    font-family: 'Lato', sans-serif;
 }
 
 .icon-buttons {
@@ -66,41 +67,87 @@ img {
     color: white;
 }
 
-
 .wrapper {
     display: flex;
     flex: 1;
     flex-direction: column;
     height: 65vh;
-    padding: 0px 60px 90px 60px;
+    padding: 0px 60px 0px 60px;
     width: 100vw;
+    /* position: absolute; */
+    /* position: relative; */
+    z-index: 0;
     align-items: center;
-    justify-content: space-around;
-    /* justify-content: center; */
+   
+    justify-content: center;
     /* padding: 100px; */
 }
 
-.shoe-image img {
-    position: relative;
+.logo img {
     width: 100%;
     height: auto;
-    z-index: 1;
-    top: 130px;
-    right: -50px;
-    min-width: 200px;
-    max-width: 300px;
+    min-width: 70px;
+}
+
+.shoe-image {
+    position: relative;
+    height: auto;
+    z-index: 2;
+    top: 10px;
+    right: 207px;
+    /* background-color: blue; */
+}
+
+.Big-Shoe {
+    /* position: relative; */
+    height: auto;
+    min-width: 100px;
+    max-width: 310px;
+    rotate: 10deg;
+    /* box-shadow: 10px 8px 10px 5px rgb(255, 0, 200); */
+    /* z-index: 1; */
+    transform: translateY(-5px);
+    /* box-shadow: 0px 10px 20px 2px rgba(0, 255, 255, 0.7); */
+    /* transform: translate(0); */
+    /* transform-style: preserve-3d; */
+    /* --s: 10px; */
 }
 
 .hero {
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    font-size: 15rem;
-    text-align: center;
-    position: absolute;
+    /* font-family: 'Lato', 'Oswald', sans-serif; */
+    /* font-family: 'Poppins', sans-serif; */
 
-    z-index: 0;
+    font-family: 'Oswald', sans-serif;
+
+    font-weight: 600;
+    /* font-size: rem; */
+    text-align: center;
+    z-index: 1;
     width: 100%;
-    height: 250px;
+    height: fit-content;
+    /* position: relative; */
+    position: absolute;
+    top: 60px;
+}
+
+.hero h1 {
+    transition: all 0.5s ease-in;
+}
+
+.hero h1:hover {
+    color: rgb(13, 93, 158);
+    letter-spacing: 10px;
+}
+
+
+.circleShadow {
+    background-color: brown;
+    width: 200px;
+    height: 200px;
+    /* position: relative; */
+    /* z-index: -1; */
+    /* box-shadow:blue green ; */
+    box-shadow: 0px 0px 200px 50px radial-gradient(50% 0%, red, orange, yellow);
 }
 
 .hero2 {
@@ -108,20 +155,127 @@ img {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    /* z-index: 0 ; */
+    height: fit-content;
+    font-family: sans-serif;
+    /* position: relative; */
+    /* top: 400px; */
+    /* z-index: 0; */
+
 }
 
 .hero2 .collections-shape {
     display: flex;
     flex-direction: column;
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     background-color: brown;
     border-radius: 50%;
+    position: relative;
+    z-index: 1;
 }
 
 .collections-shape .explore-text {
-    font-size: 0.3rem;
+    font-size: 0.4rem;
+    /* transform: rotate(6deg); */
+}
+
+.explore-text1 {
+    transform: translate(-30px,
+            100px) rotate(5deg);
+}
+
+.explore-text2 {
+    transform: translate(-35px,
+            90px) rotate(10deg);
+}
+
+.explore-text3 {
+    transform: translate(-40px,
+            80px) rotate(-1deg);
+}
+
+.explore-text4 {
+    transform: translate(-5-px,
+            70px) rotate(-30deg);
+}
+
+.explore-text5 {
+    transform: translate(13px,
+            60px) rotate(-25deg);
+}
+
+.explore-text6 {
+    transform: translate(6px,
+            40px) rotate(-20deg);
+}
+
+.explore-text7 {
+    transform: translate(3px,
+            23px) rotate(-15deg);
+}
+
+.explore-text8 {
+    transform: translate(2px,
+            14px) rotate(-10deg);
+}
+
+.explore-text9 {
+    transform: translate(0px,
+            0px) rotate(-5deg);
+}
+
+.explore-text10 {
+    transform: translate(0px, 0px) rotate(0deg);
+}
+
+.explore-text11 {
+    transform: translate(-1px,
+            8px) rotate(5deg);
+}
+
+.explore-text12 {
+    transform: translate(-2px,
+            14px) rotate(10deg);
+}
+
+.explore-text13 {
+    transform: translate(-3px,
+            25px) rotate(15deg);
+}
+
+.explore-text14 {
+    transform: translate(-6px,
+            40px) rotate(20deg);
+}
+
+.explore-text15 {
+    transform: translate(-14px,
+            60px) rotate(25deg);
+}
+
+.explore-text16 {
+    transform: translate(-20px,
+            80px) rotate(30deg);
+}
+
+.explore-text17 {
+    transform: translate(-30px,
+            90px) rotate(35deg);
+}
+
+.explore-text18 {
+    transform: translate(-40px,
+            100px) rotate(40deg);
+}
+
+.explore-text19 {
+    transform: translate(-50px,
+            110px) rotate(45deg);
+}
+
+.explore-text20 {
+    transform: translate(-60px,
+            130px) rotate(50deg);
 }
 
 .collections-shape .arrow-icon {}
@@ -130,13 +284,22 @@ img {
     font-size: 0.7rem;
 }
 
+.hero2 .shoe-properties1 {
+    padding-left: 1px;
+    border-spacing: 40px;
+    border-left: 2px solid black;
+}
+
 .hero2 .shoe-properties {
     width: 200px;
     border-left: double;
     padding-left: 10px;
     font-size: 0.75rem;
+    border-spacing: 4px;
 
 }
+
+
 
 footer {
     display: flex;
@@ -144,7 +307,10 @@ footer {
     height: 20vh;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 50px;
+    gap: 20px;
+    padding: 0px 15px;
+    /* position: relative; */
+    /* top: 23rem; */
 }
 
 /* .shoe-size{
@@ -153,8 +319,8 @@ footer {
 
 .shoe-left img,
 .shoe-right img {
-    width: 110px;
-    height: 100px;
+    width: 140px;
+    height: auto;
 }
 
 .ft-shoe-box {
@@ -168,6 +334,7 @@ footer {
     border: none solid 2px;
     border-radius: 48% 48% 0 0;
     background-color: rgb(250, 200, 200);
+    padding-bottom: 10px;
 }
 
 .ft-shoe-box h3 {
@@ -188,7 +355,8 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around
+    justify-content: space-around;
+    margin-top: 50px;
 }
 
 .ft-shop-middle>h2 {
@@ -196,6 +364,13 @@ footer {
     font-size: 2rem;
     font-stretch: wider;
     font-weight: 400;
+    transition: all 0.5s ease-in;
+}
+
+.ft-shop-middle>h2:hover {
+    font-size: 1.5rem;
+    color: brown;
+    letter-spacing: 10px;
 }
 
 .ft-shop-middle>p {
@@ -211,4 +386,13 @@ footer {
     font-weight: 600;
     font-size: small;
     border: none;
+}
+
+.ft-nike-shoe-right {
+    padding-top: 20px;
+    margin-top: 80px;
+}
+
+.ft-nike-shoe-left {
+    padding-top: 20px;
 }
