--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -78,7 +78,7 @@ img {
     /* position: relative; */
     z-index: 0;
     align-items: center;
-   
+
     justify-content: center;
     /* padding: 100px; */
 }
@@ -163,24 +163,35 @@ img {
 
 }
 
-.hero2 .collections-shape {
+.curve-circle {
     display: flex;
     flex-direction: column;
     width: 100px;
     height: 100px;
     background-color: brown;
     border-radius: 50%;
-    position: relative;
-    z-index: 1;
+    font-size: 0.5rem;
+    /* position: relative; */
+    /* z-index: 1; */
+
 }
 
-.collections-shape .explore-text {
-    font-size: 0.4rem;
-    /* transform: rotate(6deg); */
+.curved-text {
+    color: white;
+    /* transform: arc(50% 0px 50% 0px); */
+    /* transform: rotate(-20deg); */
+    /* translate: (0px, -10px); */
+    /* width: 100px;
+    height: 100%; */
+    position: relative;
+    border-radius: 50%;
+    margin: 25px auto;
+    padding: 7px;
 }
+
 
 .explore-text1 {
-    transform: translate(-30px,
+    transform: translate(-0px,
             100px) rotate(5deg);
 }
 
@@ -303,12 +314,12 @@ img {
 
 footer {
     display: flex;
-    width: 100vw;
+    width: 90vw;
     height: 20vh;
     align-items: center;
     justify-content: space-between;
     gap: 20px;
-    padding: 0px 15px;
+    padding: 0px 20px;
     /* position: relative; */
     /* top: 23rem; */
 }
